<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DanDa Recipe App</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_recipe">Add Recipe</string>
    <string name="bahan">Bahan :</string>
    <string name="Comment">Resep rendang nya GG banget, apalagi orang yang upload resep nya :v</string>
    <string name="HowTo">Tata Cara Masak :</string>
    <string name="tool">Alat :</string>
    <string name="DanDa_Recipe">DanDa Recipe</string>
    <string name="input_comment">Masukkan Komentar anda..</string>
    <string name="submit">Submit</string>
    <string name="title_change_email_password">Ubah Email dan Password</string>
    <string name="text_username">username</string>
    <string name="favorite_recipe_list">Favorite Recipe List</string>
    <string name="default_web_client">1095846942779-2j351nnl3fkq2pt57lrkghmopotieph8.apps.googleusercontent.com</string>

    <!-- Layout Information -->
    <string name="txt_information">Information</string>
    <string name="txt_capstone_project">Capstone Project</string>
    <string name="txt_team_id">Team ID C22–121</string>
    <string name="txt_revan">Muhammad Revansyah Rifky Al-basith</string>
    <string name="txt_revan_id">A009X0076</string>
    <string name="txt_chalim">Noor Chalim</string>
    <string name="txt_chalim_id">A355X0914</string>
    <string name="txt_rifaldi">Rifaldi Febrianto</string>
    <string name="txt_rifaldi_id">A314x0835</string>
    <string name="txt_waslim">Waslim</string>
    <string name="txt_waslim_id">A314X0836</string>
</resources>